fixing dark mode in detail device

--- a/client/src/DarkMode.css
+++ b/client/src/DarkMode.css
@@ -19,6 +19,11 @@ body {
 a {
   color: var(--link-color);
 }
+/* form{
+  background-color: var(--background-color);
+  color: var(--font-color);
+
+} */
 
 
 .toggle-theme-wrapper {
